recieved feedback on some styling issues. Fixed icons being too light. Fixed font sizing in several block elements.

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,9 +1,12 @@
 .footer {
-    display: flex;
-    justify-content: center;
-    padding: 60px 0;
+	display: flex;
+	justify-content: center;
+	padding: 60px 0;
 }
 
 .footer__copyright {
-   font-size: 16px;
+	font-size: 16px;
+    font-weight: 400;
+    line-height: 1;
+    color: #212121;
 }
