--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,14 +10,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-    padding: 10px;
-	 transition: opacity .5s ease-in-out, visibility 0s linear .5s;
+	padding: 10px;
+	transition: opacity 0.5s ease-in-out, visibility 0s linear 0.5s;
 }
 
 .modal_is-opened {
 	opacity: 1;
 	visibility: visible;
-	transition: opacity .5s ease-in-out, visibility 0s;
+	transition: opacity 0.5s ease-in-out, visibility 0s;
 }
 
 .modal__container {
@@ -28,6 +28,7 @@
 	background-color: #fff;
 	padding: 32px 50px;
 	position: relative;
+	color: #212121;
 }
 
 .modal__close-btn {
@@ -42,14 +43,14 @@
 	margin: 0;
 	padding: 0;
 	align-self: center;
+	opacity: 0.5;
+	border: 2px;
 }
 
 .modal__close-btn:hover {
-    opacity: 0.8;
 	cursor: pointer;
+	opacity: 1;
 }
-
-
 
 .modal__title {
 	margin: 0 0 32px;
@@ -62,7 +63,7 @@
 .modal__form {
 	display: flex;
 	flex-direction: column;
-    max-width: 700px;
+	max-width: 700px;
 }
 
 .modal__label {
@@ -84,6 +85,7 @@
 	font-size: 20px;
 	line-height: 1;
 	font-weight: 500;
+	border-width: 1px;
 }
 
 .modal__input::placeholder {
@@ -92,6 +94,10 @@
 	font-size: 20px;
 	line-height: 1;
 	font-weight: 500;
+}
+
+.modal__input:hover {
+	border-color: #212121;
 }
 
 .modal__submit-btn {
@@ -105,8 +111,8 @@
 }
 
 .modal__submit-btn:hover {
-    background-color: rgba(33, 33, 33, 0.8);
-    cursor: pointer;
+	background-color: rgba(33, 33, 33, 0.8);
+	cursor: pointer;
 }
 
 @media screen and (max-width: 627px) {
@@ -119,20 +125,20 @@
 		right: 12px;
 	}
 
-    .modal__title  {
-        font-size: 20px;
-        margin: 0 0 34px;
-    }
+	.modal__title {
+		font-size: 20px;
+		margin: 0 0 34px;
+	}
 
-    .modal__input {
-        font-size: 16px;
-    }
+	.modal__input {
+		font-size: 16px;
+	}
 
 	.modal__input::placeholder {
 		font-size: 16px;
 	}
 
-    .modal__submit-btn {
-        max-width: none;
-    }
+	.modal__submit-btn {
+		max-width: none;
+	}
 }
